--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-separator": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-tooltip": "^1.2.3",
+    "@supabase/supabase-js": "^2.90.0",
     "@types/mdx": "^2.0.13",
     "@types/three": "^0.182.0",
     "class-variance-authority": "^0.7.1",
