--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@octokit/core": "^7.0.6",
+    "@octokit/graphql": "^9.0.3",
     "@octokit/rest": "^22.0.1",
     "@radix-ui/react-avatar": "^1.1.6",
     "@radix-ui/react-icons": "^1.3.2",
